--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
       <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
-    <link rel="stylesheet" href="./preloader.css">
+      <link rel="stylesheet" href="./preloader.css">
     <link rel="stylesheet" href="./customStyles.css">
     <title>File Reader</title>
   </head>
@@ -21,20 +21,37 @@
             <a href="#" id="drag">Drop your file hear</a>
         </div>
     </div>
-    <div class="row">
-        <div class="col s6">
-            <ul></ul>
-        </div>
-        <div class="col s6">
-            <div class="row">
-                <form class="col s12">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <textarea id="fileData" class="materialize-textarea"></textarea>
-                            <label for="fileData">File Data</label>
+    <div class="container">
+        <div class="row">
+            <div class="col s6">
+                <ul></ul>
+                <button id="search" class="btn waves-effect waves-light" name="action">Search
+                    <i class="material-icons right"></i>
+                </button>
+                <div class="row">
+                    <table id="table" class="highlight centered">
+                        <thead>
+                        <tr>
+                            <th>Rule</th>
+                            <th>Count coincidence</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col s6">
+                <div id="textAreaDiv" class="row">
+                    <form class="col s12">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <textarea id="fileData" class="materialize-textarea" placeholder="File Data"></textarea>
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
